[Currency] Trim the 1-letter version of the currency code

Callers are expected to show the currency code next to the amount, so
strip all variations of the currency code from the output, when
possible.

Bug: 724150
Test: components_unittests
Change-Id: I4cbe59f710df0375785cf10068b343d00cc2cc29
Reviewed-on: https://chromium-review.googlesource.com/508222
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472958}
Former-commit-id: fb2b1a4cf89b8912e9a0dc7e718ccef161d4fce4